# datasentinel

./: .env.example  .gitignore  CASE_STUDY.md  CUSTOMER_OVERVIEW.md  DEVELOPMENT.md  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
demo/: app.py  run_all.py
demo/scenarios/: agent_demo.py  semantic_demo.py  stream_demo.py
infra/: docker-compose.yml
infra/configs/postgres/: init.sql
shared/: pyproject.toml
shared/src/datasentinel_shared/: __init__.py  claude_client.py  config.py  logging.py
