[project]
name = "datasentinel"
version = "0.1.0"
description = "Agentic data reliability platform — semantic validation, self-healing pipelines, real-time stream monitoring"
readme = "README.md"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/*", "shared"]

[tool.uv.sources]
datasentinel-shared = { workspace = true }
datasentinel-semantic = { workspace = true }
datasentinel-agent = { workspace = true }
datasentinel-stream = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
