[project]
name = "datasentinel-shared"
version = "0.1.0"
description = "Shared utilities for the DataSentinel platform"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "tenacity>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datasentinel_shared"]
